other-mpol/update-image-tag/.chainsaw-test/chainsaw-step-01-apply-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    foo.io/foo: bar
    vault.hashicorp.com/agent-inject: "true"
  labels:
    app: busybox
  name: deployment00
  namespace: update-image-tag-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - image: ghcr.io/kyverno/test-busybox:1.35
        name: busybox
      - image: vault:1.2.3
        name: vault-agent
