other-mpol/update-image-tag/.chainsaw-test/deploy00-patched-again.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    foo.io/foo: bar
    vault.hashicorp.com/agent-inject: "true"
  labels:
    app: busybox
  namespace: update-image-tag-ns
  name: deployment00
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      ~.(containers[?name == 'vault-agent']):
        image: vault:1.6.0
      ~.(containers[?name == 'busybox']):
        image: ghcr.io/kyverno/test-busybox:1.35
