other-mpol/update-image-tag/.chainsaw-test/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: update-image-tag-ns
