other-mpol/update-image-tag/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: update-image-tag
spec:
  steps:
  - name: step-00
    try:
    - apply:
        file: cluster-role.yaml
    - apply:
        file: ns.yaml
  - name: step-01
    try:
    - apply:
        file: chainsaw-step-01-apply-1.yaml
  - name: step-02
    try:
    - apply:
        file: ../update-image-tag.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-03
    try:
    - apply:
        file: deploy.yaml
    - assert:
        file: deploy00-patched.yaml
    - assert:
        file: deploy01-patched.yaml
    - assert:
        file: deploy02-patched.yaml
    - error:
        file: deploy03-not-patched.yaml
    - error:
        file: deploy04-not-patched.yaml
    - apply:
        file: policy-update.yaml
    - assert:
        file: deploy00-patched-again.yaml
    - assert:
        file: deploy01-patched-again.yaml
    - assert:
        file: deploy02-patched-again.yaml
